// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link all props 1`] = `
<View
  accessibilityRole="link"
  accessible={true}
  cursor="pointer"
  focusable={true}
  onAccessibilityTap={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
    }
  }
  url="https://www.bing.com"
>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": "center",
        "textDecorationLine": "underline",
      }
    }
  >
    Link all props
  </Text>
</View>
`;

exports[`Link with child 1`] = `
<View
  accessibilityRole="link"
  accessible={true}
  cursor="pointer"
  focusable={true}
  onAccessibilityTap={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
    }
  }
  url="https://www.bing.com"
>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#0f6cbd",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": "center",
        "textDecorationLine": "underline",
      }
    }
  >
    Link with child
  </Text>
  <View />
</View>
`;
